Made listview a little nicer looking. Issues with spacing at end of rows because they divs, not spans. If I change to spans the relativity of the spacing gets messed up... Need to fix this.

--- a/client/app/listview/listview.scss
+++ b/client/app/listview/listview.scss
@@ -165,3 +165,67 @@ div[data-listview] .column-title span {
   opacity:1;
   max-height:40px;
 }
+
+.date {
+  width: 50px; height: 70px; 
+  background: #003366; 
+  background: linear-gradient(top, #d10000 0%,#7a0909 100%); 
+  background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%); 
+  background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%); 
+  border-radius: 10px;
+  font-size: 20px; font-weight: bold; color: #fff; text-transform: uppercase;   
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  font-family: 'Lato', sans-serif;
+}
+
+.date p {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px; text-align: center; color: #9e9e9e; 
+}
+
+.date p span {
+  font-family: 'Lato', sans-serif;
+  background: #003366; 
+  background: linear-gradient(top, #d10000 0%, #7a0909 100%);
+  background: -moz-linear-gradient(top, #d10000 0%, #7a0909 100%);
+  background: -webkit-linear-gradient(top, #d10000 0%, #7a0909 100%);
+  font-size: 20px; font-weight: bold; color: #fff; text-transform: uppercase;   
+  display: block;
+  border-radius: 0 0 10px 10px;
+  -moz-border-radius: 0 0 10px 10px;
+  -webkit-border-radius: 0 0 10px 10px;
+  padding: 6px 0 6px 0;
+}
+
+.eventName{
+  font-size: 30px; color: #9e9e9e; 
+  font-family: 'Lato', sans-serif;
+  position:relative;
+  bottom:8px;
+}
+
+.eventLocation{
+  font-size: 20px; color: #9e9e9e; 
+  font-family: 'Lato', sans-serif;
+  position:relative;
+  text-align: left;
+}
+
+.eventTime{
+  font-size: 15px; color:#9e9e9e;
+  font-family: 'Lato', sans-serif;
+  position:relative;
+  bottom:75px;
+  left: 1000px;
+}
+
+.attendButton{
+  font-size: 30px; color:#9e9e9e;
+  font-family: 'Lato', sans-serif;
+  position:relative;
+  bottom:75px;
+  left:1000px;
+}
